busca por id na categoria